<resources>

    <!-- application labels -->
    <string name="app_name">Eek! Spelling</string>
    <string name="app_name_label">Eek! Spelling</string>

    <!-- game labels -->
    <string name="txt_letter_tree">Letter Tree</string>
    <string name="txt_picture_drop">Picture Drop</string>
    <string name="txt_spelling_tile">Spelling Tile</string>
    <string name="txt_word_maze">Word Maze</string>
    <string name="txt_rewards">Rewards</string>
    <string name="txt_extras">Extras</string>
    <string name="txt_fb">Facebook</string>
    <string name="txt_twitter">Twitter</string>
    <string name="txt_feedback">Feedback</string>
    <string name="txt_toggle_music">Music Settings:</string>
    <string name="txt_more_apps">More Apps</string>
    <string name="txt_share">Share</string>
    <string name="txt_eek_math">Eek! Math I</string>
    <string name="txt_elements">Elements</string>
    <string name="txt_banana">Banana And The Beat</string>
    <string name="txt_no_numbers">Numbers not allowed!</string>
   	<string name="txt_meta">[meta]</string>
    <string name="txt_hint">Hint:</string>
    <string name="txt_select">Lets Learn!</string>
    <string name="txt_locked">Locked</string>
    <string name="txt_bank">Bank</string>
    <string name="txt_by">By:</string>
    <string name="txt_author">Jordan Mann &amp; Leonard Tatum</string>
    <string name="txt_dialog_wait_please">Please wait&#8230;</string>
    <string name="txt_dialog_congratulation">Congratulations!</string>
    <string name="txt_input_letter">Input A Letter:</string>
    <string name="btn_learn">Learn</string>
    <string name="btn_rewards">Rewards</string>
    <string name="btn_extras">Extras</string>
    <string name="btn_go">Go!</string>
    <string name="btn_ok">OK</string>

    <!-- device menu related options -->
    <string name="settings_options">More Options</string>
    <string name="settings_share">Share App</string>
    <string name="action_settings">Settings</string>

</resources>