<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/splash_screen"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}"
    tools:ignore="UselessParent,contentDescription" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/app_name_label"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_30" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txt_by"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_24" />

        <com.blog.ljtatum.eekspellingi.anim.ShimmerTextView
            android:id="@+id/tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/txt_author"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_24" />
    </LinearLayout>

</FrameLayout>