<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg_4c"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}"
    tools:ignore="UselessParent,contentDescription" >

    <RelativeLayout
        android:id="@+id/rl"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@color/black_overlay3"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal"
            android:text="@string/app_name_label"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_28" />
    </RelativeLayout>

    <ImageView
        android:id="@+id/iv_char"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_above="@+id/ll_banner"
        android:layout_alignParentLeft="true"
        android:scaleType="fitXY"
        android:src="@drawable/b_character_smile" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/iv_char"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:padding="6dp" >

        <Button
            android:id="@+id/btn_learn"
            android:layout_width="200dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button_a"
            android:clickable="true"
            android:text="@string/btn_learn"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_26" />

        <Button
            android:id="@+id/btn_rewards"
            android:layout_width="200dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/custom_button_a"
            android:clickable="true"
            android:text="@string/btn_rewards"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_26" />

        <Button
            android:id="@+id/btn_extras"
            android:layout_width="200dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_button_a"
            android:clickable="true"
            android:text="@string/btn_extras"
            android:textColor="@color/black"
            android:textSize="@dimen/font_size_26" />
    </LinearLayout>

    <!-- Banner size: 320x65 -->

    <LinearLayout
        android:id="@id/ll_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_banner"
            android:layout_width="320dp"
            android:layout_height="65dp"
            android:background="@drawable/ph_banner_eek" />
    </LinearLayout>

</RelativeLayout>