<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:ignore="UselessParent,contentDescription" >

    <com.blog.ljtatum.eekspellingi.view.RoundedImageView
        android:id="@+id/rl"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:orientation="vertical"
        android:scaleType="fitXY"
        android:src="@drawable/bg_popup"
        app:riv_border_color="@color/white"
        app:riv_border_width="3dp"
        app:riv_corner_radius="12dp"
        app:riv_mutate_background="true"
        app:riv_oval="false"
        app:riv_tile_mode="clamp" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/txt_dialog_congratulation"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_20" />

    <View
        android:id="@+id/v1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/tv1"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="10dp"
        android:background="@color/white" />

    <com.blog.ljtatum.eekspellingi.view.CircleImageView
        android:id="@+id/iv1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/v1"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tv_meta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/v1"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@+id/iv1"
        android:gravity="center_horizontal"
        android:text="@string/txt_meta"
        android:textColor="@color/black"
        android:textSize="@dimen/font_size_20" />

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_below="@+id/iv1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/custom_button_d"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/btn_ok"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_20" />

</RelativeLayout>