<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg_4c"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}"
    tools:ignore="UselessParent,contentDescription" >

    <ScrollView
        android:id="@+id/sv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="35dp" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/extras_rl1"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@color/black_overlay3"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/extras_tv_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_extras"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_28" />

                <ImageView
                    android:id="@+id/extras_iv_back"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/arrow_back" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/extras_rl2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/extras_rl1"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingTop="10dp" >

                <TextView
                    android:id="@+id/extras_tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/txt_toggle_music"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_26" />

                <TextView
                    android:id="@+id/extras_tv_meta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/extras_tv1"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_26" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    style="@style/toggleButton"
                    android:layout_width="80dp"
                    android:layout_height="34dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/ic_toggle_bg" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/extras_rl3"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_below="@id/extras_rl2"
                android:background="@color/black_overlay3"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/extras_tv2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_more_apps"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_28" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/extras_rl4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/extras_rl3"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/extras_iv1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/extras_tv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/extras_iv1"
                    android:text="@string/txt_banana"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_26" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/extras_rl8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/extras_rl4"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/extras_iv4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/extras_tv7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/extras_iv4"
                    android:text="@string/txt_eek_math"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_26" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/extras_rl10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/extras_rl8"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/extras_iv6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:id="@+id/extras_tv10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/extras_iv6"
                    android:text="@string/txt_elements"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_26" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/extras_rl5"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_below="@id/extras_rl10"
                android:background="@color/black_overlay3"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/extras_tv4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center_horizontal"
                    android:text="@string/txt_share"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_28" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/extras_rl6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/extras_rl5"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/extras_iv2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/fb_icon" />

                <TextView
                    android:id="@+id/extras_tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/extras_iv2"
                    android:text="@string/txt_fb"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_26" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/extras_rl7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/extras_rl6"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/extras_iv3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/twitter_icon" />

                <TextView
                    android:id="@+id/extras_tv6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/extras_iv3"
                    android:text="@string/txt_twitter"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_26" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/extras_rl9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/extras_rl7"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/extras_iv5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:src="@drawable/email_icon" />

                <TextView
                    android:id="@+id/extras_tv9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:layout_toRightOf="@+id/extras_iv5"
                    android:text="@string/txt_feedback"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_size_26" />
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <!-- Banner size: 320x65 -->

    <LinearLayout
        android:id="@+id/ll_banner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/sv"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_banner"
            android:layout_width="320dp"
            android:layout_height="65dp"
            android:background="@drawable/ph_banner_eek" />
    </LinearLayout>

</RelativeLayout>